# kairo

./: .env.example  .env.production  .gitignore  CONTINUE.md  DEPLOYMENT.md  debug.keystore  dev.bat  index.html  kairo.apk.idsig  package-lock.json  package.json  tailwind.config.js  vite.config.ts
design-system/: README.md  SKILL.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  base.css  effects.css  styles.css
design-system/tokens/: colors.css  fonts.css  spacing.css  themes.css  typography.css
promo/: .gitignore  package-lock.json  package.json  tsconfig.json
promo/src/: KairoPromo.tsx  Root.tsx  fonts.ts  themes.ts
public/: manifest.json  sw.js
server/: package-lock.json  package.json
server/src/: auth.ts  crypto.ts  db.ts  groq.ts  index.ts  openrouter.ts  rate-limit.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  ws_server.rs
src/hooks/: useAudioRecorder.ts  useDailies.ts  useDeadlineWatcher.ts  useExpenses.ts  useLanSync.ts  useMediaQuery.ts  usePlan.ts  useTasks.ts
src/lib/: account.ts  auth.ts  daily-storage.ts  date.ts  expense-storage.ts  parser.ts  plan-storage.ts  query-client.ts  storage.ts  supabase.ts  transcriber.ts
src/pages/: CalendarPage.tsx  Dashboard.tsx  EventLog.tsx  ExpensesPage.tsx  FocusPage.tsx  LanSyncPage.tsx  LockScreen.tsx  SyncPage.tsx  TodoPage.tsx  TrashPage.tsx  WeeksPage.tsx
src/services/: daily.service.ts  expense.service.ts  lan-sync.service.ts  notifications.service.ts  (+6 more)
(+129 files in other folders)
